# dhlkit

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTH.md  architecture.md  gotchas.md
docs/endpoints/: pickup.md  postnumber.md  tracking-legacy.md  tracking-unified.md
scripts/: gen_models.py  record_live_fixtures.py
specs/: auth-ropc.yaml  postnumber-v1.yaml
src/dhlkit/: __init__.py  _gen.py  cli.py  client.py  config.py  errors.py  logging.py  models.py  pagination.py  resource.py  retry.py  transport.py  unified.py
src/dhlkit/auth/: __init__.py  apikey.py  base.py  basic.py  cache.py  ropc.py
src/dhlkit/resources/: __init__.py  pickup.py  postnumber.py  tracking.py  tracking_legacy.py  tracking_unified.py
tests/: conftest.py  test_auth.py  test_codegen.py  test_config.py  test_errors.py  test_gotchas.py  test_live.py  test_logging.py  test_package.py  test_pagination.py  test_resources.py  test_tracking.py  test_transport.py  test_unified.py
tests/fixtures/: error.json  pickup_locations.json  postnumber.json  token.json  tracking_legacy_multiple.xml  tracking_legacy_return.xml  tracking_legacy_single.xml  tracking_unified.json  tracking_unified_return.json
