[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "dhlkit"
version = "0.1.0"
description = "A typed Python SDK for the DHL Parcel DE APIs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dhlkit contributors" }]
keywords = ["dhl", "parcel", "shipping", "tracking", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "orjson>=3.10",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "pydantic-xml[lxml]>=2.14",
  "structlog>=24.4",
  "tenacity>=9.0",
]

[project.optional-dependencies]
cli = ["rich>=13.9", "typer>=0.15"]

[project.scripts]
dhlkit = "dhlkit.cli:app"

[project.urls]
Homepage = "https://github.com/heyalexej/dhlkit"
Repository = "https://github.com/heyalexej/dhlkit"
Issues = "https://github.com/heyalexej/dhlkit/issues"
Changelog = "https://github.com/heyalexej/dhlkit/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "datamodel-code-generator>=0.35",
  "hatchling>=1.27",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pyyaml>=6.0",
  "respx>=0.22",
  "ruff>=0.9",
  "ty>=0.0.1a16",
]

# The official DHL specs are committed code-generation inputs but are excluded
# from published artifacts; generated Pydantic models ship in the wheel.
[tool.hatch.build.targets.sdist]
exclude = ["specs", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/dhlkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
markers = ["live: calls the real DHL gateway (opt-in with -m live)"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["dhlkit"]
omit = ["src/dhlkit/generated/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/dhlkit/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ty.src]
exclude = ["src/dhlkit/generated"]

[tool.ty.environment]
extra-paths = ["scripts"]
